--- a/login.html
+++ b/login.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treeppa | Login</title>
+    <link rel="icon" href="cart-png-clipart-icon.png" type="image/png">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
