--- a/products.html
+++ b/products.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Store</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="cart-png-clipart-icon.png" type="image/png">
+
 
     <style>
         table, th, td {
