--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 
     <script>
-        alert("Welcome to Treeppa");
+        alert("Welcome to Treepa");
         var name= prompt("Please enter your Name");
 
     </script>
